Used prefix noations in the makefile

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,36 +1,53 @@
-HEADERS = includes/libft.h
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: mmoliele <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2016/08/23 16:21:43 by mmoliele          #+#    #+#              #
+#    Updated: 2016/08/23 16:46:37 by mmoliele         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
-CC = gcc
+NAME = libft.a
 
-CFLAGS = -Wall -Werror -Wextra
+CC 	= gcc -c -Wall -Werror -Wextra
 
-SRC = src/ft_putstr.c\
-	src/ft_putchar.c\
-	src/ft_strdup.c
+SRC	= 	ft_putstr.c		\
+		ft_putchar.c	\
+		ft_strdup.c		\
+		ft_strlen.c		\
+		ft_memset.c		\
 
-LFLAGS = -L
+INC = 	libft.h			\
 
-LDLIBS = -lft
+OBJ	= $(SRC:.c=.o)
 
-PROG = libft.a
+SRCDIR	= ./src/
 
-OBJECTS = $(SRC:.c=.o)
+OBJDIR	= ./objs/
 
-$(PROG): $(HEADERS)
-	@$(CC) $(CFLAGS) -c -I includes/ $(SRC) $(HEADERS)
-	@ar rc $(PROG) *.o
-	@ranlib $(PROG)
-	@echo "Compiling library....[OK]"
+INCDIR	= ./includes/
 
-all:$(PROG)
-	@echo "Finish status....[OK]"
+SRCS	= $(addprefix $(SRCDIR), $(SRC))
+
+OBJS	= $(addprefix $(OBJDIR), $(OBJ))
+
+INCS	= $(addprefix $(INCDIR), $(INC))
+
+all: $(NAME)
+
+$(NAME) :
+	@$(CC) $(SRCS) -I $(INCS)
+	@mv $(OBJ) $(OBJDIR)
+	@ar rc $(NAME) $(OBJS)
+	@ranlib $(NAME)
 
 clean:
-	rm -f *.o
+	@rm -rf $(OBJS)
 
-fclean:
-	rm -f $(PROG)
+fclean: clean
+	@rm -rf $(NAME)
 
 re: fclean all
-
-.PHONEY: clean fclean re
