--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,3 +1,4 @@
+
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
@@ -5,83 +6,84 @@
 #                                                     +:+ +:+         +:+      #
 #    By: mmoliele <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2016/08/23 16:21:43 by mmoliele          #+#    #+#              #
-#    Updated: 2016/09/05 17:30:30 by mmoliele         ###   ########.fr        #
+#    Created: 2016/05/10 10:33:22 by mmoliele          #+#    #+#              #
+#    Updated: 2016/08/01 15:14:29 by mmoliele         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = libft.a
+NAME		=	libft.a
 
-CC = gcc -c -Wall -Werror -Wextra
+EXEC		=	test 
 
-SRC = 	ft_putstr.c			\
-		ft_putchar.c		\
-		ft_putnbr.c			\
-		ft_strdup.c			\
-		ft_strlen.c			\
-		ft_strcat.c			\
-		ft_strcpy.c			\
-		ft_strncpy.c		\
-		ft_strncat.c		\
-		ft_strlcat.c		\
-		ft_strstrim.c		\
-		ft_strchr.c			\
-		ft_strrchr.c		\
-		ft_strstr.c			\
-		ft_strnstr.c		\
-		ft_strcmp.c			\
-		ft_strncmp.c		\
-		ft_bzero.c			\
-		ft_isalpha.c		\
-		ft_isalnum.c		\
-		ft_isascii.c		\
-		ft_islower.c		\
-		ft_iswhitespace.c	\
-		ft_isdigit.c		\
-		ft_isprint.c		\
-		ft_isupper.c		\
-		ft_toupper.c		\
-		ft_tolower.c		\
-		ft_memset.c			\
-		ft_memmove.c		\
-		ft_memcpy.c			\
-		ft_memcmp.c			\
-		ft_memchr.c			\
-		ft_memccpy.c		\
-		ft_memalloc.c		\
-		ft_atoi.c			\
-		ft_itoa.c			\
+C_FILES		=	ft_memset.c\
+				ft_bzero.c\
+				ft_memcpy.c\
+				ft_memmove.c\
+				ft_memchr.c\
+				ft_memcmp.c\
+				ft_strlen.c\
+				ft_strdup.c\
+				ft_strcpy.c\
+				ft_memccpy.c\
+				ft_strncpy.c\
+				ft_strcat.c\
+				ft_strncat.c\
+				ft_strlcat.c\
+				ft_strchr.c\
+				ft_strrchr.c\
+				ft_strstr.c\
+				ft_strnstr.c\
+				ft_strcmp.c\
+				ft_strncmp.c\
+				ft_atoi.c\
+				ft_isalpha.c\
+				ft_isdigit.c\
+				ft_isalnum.c\
+				ft_isascii.c\
+				ft_isprint.c\
+				ft_toupper.c\
+				ft_tolower.c\
+				ft_memalloc.c\
+				ft_memdel.c\
+				ft_strnew.c\
+				ft_strdel.c\
+				ft_strclr.c\
+				ft_striter.c\
+				ft_striteri.c\
+				ft_strmap.c\
+				ft_strmapi.c\
+				ft_strequ.c\
+				ft_strnequ.c\
+				ft_strsub.c\
+				ft_strjoin.c\
+				ft_strtrim.c\
+				ft_strsplit.c\
+				ft_itoa.c\
+				ft_putchar.c\
+				ft_putstr.c\
+				ft_putendl.c\
+				ft_putchar_fd.c\
+				ft_putstr_fd.c\
+				ft_putendl_fd.c\
+				ft_putnbr.c\
+				ft_putnbr_fd.c\
 
-INC = 	libft.h				\
+O_FILES		=	$(C_FILES:.c=.o)
+				
+GCC		=	gcc -Wall -Wextra -Werror
 
-OBJ	= $(SRC:.c=.o)
-
-SRCDIR	= ./src/
-
-OBJDIR	= ./objs/
-
-INCDIR	= ./includes/
-
-SRCS	= $(addprefix $(SRCDIR), $(SRC))
-
-OBJS	= $(addprefix $(OBJDIR), $(OBJ))
-
-INCS	= $(addprefix $(INCDIR), $(INC))
-
-all: $(NAME)
+all : $(NAME)
 
 $(NAME) :
-	@$(CC) $(SRCS) -I $(INCS)
-	@mv $(OBJ) $(OBJDIR)
-	@ar rc $(NAME) $(OBJS)
-	@ranlib $(NAME)
+	$(CC) -c $(C_FILES)
+	ar rc $(NAME) $(O_FILES)
+	ranlib $(NAME)
 
-clean:
-	@rm -rf $(OBJS)
+clean :
+	/bin/rm -f $(O_FILES)
 
-fclean: clean
-	@rm -rf $(NAME)
+fclean :
+	/bin/rm -f $(O_FILES)
+	/bin/rm -f $(NAME) $(EXE)
 
-re: fclean all
-
-.PHONY: clean
+re : fclean all
